website/websites/gp4/code/chameneos-gcj.log
BUILD COMMANDS FOR: chameneos.gcj

Thu Mar 29 23:53:04 PDT 2007

/usr/bin/gcj -x java -O3 -fomit-frame-pointer -march=pentium4  -fno-bounds-check -o chameneos.gcj_run --main=chameneos chameneos.javagcj
chameneos.javagcj:17: error: Invalid declaration.
	public enum Colour {
                              ^
chameneos.javagcj:18: error: ':' expected.
		RED, BLUE, YELLOW, FADED
                      ^
chameneos.javagcj:125: error: .
	public chameneos(int n) throws InterruptedException {
           ^
chameneos.javagcj:7: error: .
import java.util.concurrent.locks.ReentrantLock;
          ^
chameneos.javagcj:13: error: .
	public static final Colour[] COLOURS = Colour.values();
                               ^
chameneos.javagcj:25: error: .
		private Colour colour;
                           ^
chameneos.javagcj:29: error: .
		public Creature(Colour c, MeetingPlace mp) {
                                   ^
chameneos.javagcj:44: error: .
			Colour other;
                           ^
chameneos.javagcj:60: error: .
		private Colour complement(Colour other) {
                                             ^
chameneos.javagcj:60: error: .
		private Colour complement(Colour other) {
                           ^
chameneos.javagcj:79: error: .
		public Colour getColour() {
                          ^
chameneos.javagcj:85: error: .
		Colour first, second;
                   ^
chameneos.javagcj:85: error: .
		Colour first, second;
                   ^
chameneos.javagcj:95: error: .
		public Colour meet(Colour me) throws Exception {
                                      ^
chameneos.javagcj:95: error: .
		public Colour meet(Colour me) throws Exception {
                          ^
chameneos.javagcj:96: error: .
			Colour other;
                           ^
16 errors
make[3]: [chameneos.gcj_run] Error 1 (ignored)
rm chameneos.javagcj

=================================================================
COMMAND LINE (%A is single numeric argument):

chameneos.gcj_run %A
Error, could not exec chameneos.gcj_run 50000 (No such file or directory)
PATH=/home/dunham/gp4/shootout/bench/chameneos:/home/dunham/gp4/shootout/bench/chameneos/tmp:/usr/local/bin:/usr/bin:/bin:/opt/bin:/usr/i686-pc-linux-gnu/gcc-bin/4.1.1:/opt/ghc/bin:/opt/sun-jdk-1.4.2.13/bin:/opt/sun-jdk-1.4.2.13/jre/bin:/opt/sun-jdk-1.4.2.13/jre/javaws:/usr/qt/3/bin:/usr/i686-pc-linux-gnu/gnat-gcc-bin/4.1:/usr/libexec/gnat-gcc/i686-pc-linux-gnu/4.1:/opt/cint-5.16.19:/opt/kroc-1.4.0/install/bin:/opt/dmd/bin:/opt/sun-jdk-1.5.0.08/bin:/opt/sun-jdk-1.4.2.12/bin:/opt/mozart/bin:/opt/groovy-1.0-JSR-06/bin:/opt/smlnj/bin
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
